Fixed header image being too big

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -181,7 +181,7 @@ input[type="radio"] {
 }
 
 .header-image {
-    height: 90%;
+    width: 80px;
 }
 
 .header-title {
